tests/ui/consts/const-float-classify.stderr
error[E0015]: cannot call non-const fn `<A as MyEq<B>>::eq` in constant functions
  --> $DIR/const-float-classify.rs:31:7
   |
LL |     x.eq(y)
   |       ^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
